--- a/index.html
+++ b/index.html
@@ -55,7 +55,36 @@
 					<p class="ba-slide__subtitle">by Fabrizio Morra</p>
 				</div>
 			</div>
+			<div class="ba-slide">
+				<img src="img/img1.jpg" alt="">
+				<div class="ba-slide__text">
+					<p class="ba-slide__title">Apex Magazine June Issue</p>
+					<p class="ba-slide__subtitle">by Fabrizio Morra</p>
+				</div>
+			</div>
+			<div class="ba-slide">
+				<img src="img/img2.jpg" alt="">
+				<div class="ba-slide__text">
+					<p class="ba-slide__title">Apex Magazine June Issue</p>
+					<p class="ba-slide__subtitle">by Fabrizio Morra</p>
+				</div>
+			</div>
+			<div class="ba-slide">
+				<img src="img/img3.jpg" alt="">
+				<div class="ba-slide__text">
+					<p class="ba-slide__title">Apex Magazine June Issue</p>
+					<p class="ba-slide__subtitle">by Fabrizio Morra</p>
+				</div>
+			</div>
+			<div class="ba-slide">
+				<img src="img/img4.jpg" alt="">
+				<div class="ba-slide__text">
+					<p class="ba-slide__title">Apex Magazine June Issue</p>
+					<p class="ba-slide__subtitle">by Fabrizio Morra</p>
+				</div>
+			</div>
 		</div>
+
 	</div>
 	
 	
